Fixed mobile spacing

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1789,7 +1789,6 @@ label {
 	display: flex!important;
 }
 
-
 @media (max-width: 800px) {
 	.contact_description,
 	.about_description,
@@ -1802,5 +1801,14 @@ label {
 	.contact_form label,
 	.contact_form p {
 		text-align: start;
+	}
+
+	.smBtn {
+		font-size: .65rem;
+	}
+
+	.date_picker_calendar {
+		left: -4.6rem;
+		font-size: .75rem;
 	}
 }
